yarn: move endomodel to model transformation to code generator

--- a/doc/agile/v1/sprint_backlog_04.org
+++ b/doc/agile/v1/sprint_backlog_04.org
@@ -14,28 +14,28 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-08-22 Tue 01:32]
+#+CAPTION: Clock summary at [2017-08-22 Tue 01:42]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *33:40* |       |       | 100.0 |
+| *Total time*                                                                | *33:50* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 33:40   |       |       | 100.0 |
-| Active                                                                      |         | 33:40 |       | 100.0 |
+| Stories                                                                     | 33:50   |       |       | 100.0 |
+| Active                                                                      |         | 33:50 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   1.7 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   2.8 |
-| COMPLETED Use shared pointers in all models                                 |         |       |  6:22 |  18.9 |
+| COMPLETED Use shared pointers in all models                                 |         |       |  6:22 |  18.8 |
 | COMPLETED Update repository in yarn.dia to use pointers                     |         |       |  2:50 |   8.4 |
-| COMPLETED Remove support for upsilon                                        |         |       |  1:10 |   3.5 |
+| COMPLETED Remove support for upsilon                                        |         |       |  1:10 |   3.4 |
 | COMPLETED Add a backwards compatible flag                                   |         |       |  1:27 |   4.3 |
-| COMPLETED Create an exogenous model                                         |         |       | 12:20 |  36.6 |
+| COMPLETED Create an exogenous model                                         |         |       | 12:20 |  36.5 |
 | COMPLETED Tailor should rely only on exogenous models                       |         |       |  2:12 |   6.5 |
 | COMPLETED Remove scribble group from intermediate model                     |         |       |  0:39 |   1.9 |
 | COMPLETED Tailor is not handling initialisation correctly                   |         |       |  0:15 |   0.7 |
 | COMPLETED Rename exogenous model to exomodel                                |         |       |  1:01 |   3.0 |
 | COMPLETED Rename intermediate model to endomodel                            |         |       |  1:49 |   5.4 |
 | COMPLETED Fix broken build due to JSON tests                                |         |       |  0:26 |   1.3 |
-| STARTED Clean up transforms to match exogenous/endogenous models            |         |       |  1:38 |   4.9 |
+| COMPLETED Clean up transforms to match exogenous/endogenous models          |         |       |  1:48 |   5.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -391,7 +391,9 @@ model" to exomodel.
 After much faffing around, it seems we inadvertently removed c++
 output from JSON models, resulting in travis builds breaks.
 
-*** STARTED Clean up transforms to match exogenous/endogenous models  :story:
+*** COMPLETED Clean up transforms to match exogenous/endogenous models :story:
+    CLOSED: [2017-08-22 Tue 01:42]
+    CLOCK: [2017-08-22 Tue 01:32]--[2017-08-22 Tue 01:42] =>  0:10
     CLOCK: [2017-08-22 Tue 01:19]--[2017-08-22 Tue 01:31] =>  0:12
     CLOCK: [2017-08-22 Tue 01:15]--[2017-08-22 Tue 01:18] =>  0:03
     CLOCK: [2017-08-22 Tue 01:11]--[2017-08-22 Tue 01:14] =>  0:03
@@ -419,7 +421,8 @@ Tasks:
 - rename final model transform to endomodel to model transform
 - create a model generation chain transform which calls the endomodel
   generation chain and then processes the result with the endomodel to
-  model transform.
+  model transform. Actually, doing this in the code generator
+  suffices.
 
 *** Add validation to tailor transforms                               :story:
 
