--- a/doc/agile/v1/sprint_backlog_04.org
+++ b/doc/agile/v1/sprint_backlog_04.org
@@ -14,30 +14,30 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-08-24 Thu 15:52]
+#+CAPTION: Clock summary at [2017-08-24 Thu 16:05]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *36:11* |       |       | 100.0 |
+| *Total time*                                                                | *36:23* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 36:11   |       |       | 100.0 |
-| Active                                                                      |         | 36:11 |       | 100.0 |
+| Stories                                                                     | 36:23   |       |       | 100.0 |
+| Active                                                                      |         | 36:23 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   1.6 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   2.6 |
-| COMPLETED Use shared pointers in all models                                 |         |       |  6:22 |  17.6 |
+| COMPLETED Use shared pointers in all models                                 |         |       |  6:22 |  17.5 |
 | COMPLETED Update repository in yarn.dia to use pointers                     |         |       |  2:50 |   7.8 |
 | COMPLETED Remove support for upsilon                                        |         |       |  1:10 |   3.2 |
 | COMPLETED Add a backwards compatible flag                                   |         |       |  1:27 |   4.0 |
-| COMPLETED Create an exogenous model                                         |         |       | 12:20 |  34.1 |
-| COMPLETED Tailor should rely only on exogenous models                       |         |       |  2:12 |   6.1 |
+| COMPLETED Create an exogenous model                                         |         |       | 12:20 |  33.9 |
+| COMPLETED Tailor should rely only on exogenous models                       |         |       |  2:12 |   6.0 |
 | COMPLETED Remove scribble group from intermediate model                     |         |       |  0:39 |   1.8 |
 | COMPLETED Tailor is not handling initialisation correctly                   |         |       |  0:15 |   0.7 |
 | COMPLETED Rename exogenous model to exomodel                                |         |       |  1:01 |   2.8 |
 | COMPLETED Rename intermediate model to endomodel                            |         |       |  1:49 |   5.0 |
 | COMPLETED Fix broken build due to JSON tests                                |         |       |  0:26 |   1.2 |
-| COMPLETED Clean up transforms to match exogenous/endogenous models          |         |       |  1:48 |   5.0 |
+| COMPLETED Clean up transforms to match exogenous/endogenous models          |         |       |  1:48 |   4.9 |
 | COMPLETED Add validation to tailor transforms                               |         |       |  0:20 |   0.9 |
-| STARTED Rename =meta_type= in JSON                                          |         |       |  2:01 |   5.6 |
+| STARTED Rename =meta_type= in JSON                                          |         |       |  2:13 |   6.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -435,6 +435,7 @@ Check that the transforms support "from" and "to" for the user
 requested types.
 
 *** STARTED Rename =meta_type= in JSON                                :story:
+    CLOCK: [2017-08-24 Thu 15:53]--[2017-08-24 Thu 16:05] =>  0:12
     CLOCK: [2017-08-24 Thu 15:19]--[2017-08-24 Thu 15:52] =>  0:33
     CLOCK: [2017-08-24 Thu 14:50]--[2017-08-24 Thu 15:18] =>  0:28
     CLOCK: [2017-08-24 Thu 10:03]--[2017-08-24 Thu 11:03] =>  1:00
