--- a/doc/agile/v1/sprint_backlog_04.org
+++ b/doc/agile/v1/sprint_backlog_04.org
@@ -14,21 +14,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-08-24 Thu 18:16]
+#+CAPTION: Clock summary at [2017-08-24 Thu 18:35]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *36:30* |       |       | 100.0 |
+| *Total time*                                                                | *36:38* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 36:30   |       |       | 100.0 |
-| Active                                                                      |         | 36:30 |       | 100.0 |
+| Stories                                                                     | 36:38   |       |       | 100.0 |
+| Active                                                                      |         | 36:38 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   1.6 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   2.6 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   2.5 |
 | COMPLETED Use shared pointers in all models                                 |         |       |  6:22 |  17.4 |
-| COMPLETED Update repository in yarn.dia to use pointers                     |         |       |  2:50 |   7.8 |
+| COMPLETED Update repository in yarn.dia to use pointers                     |         |       |  2:50 |   7.7 |
 | COMPLETED Remove support for upsilon                                        |         |       |  1:10 |   3.2 |
 | COMPLETED Add a backwards compatible flag                                   |         |       |  1:27 |   4.0 |
-| COMPLETED Create an exogenous model                                         |         |       | 12:20 |  33.8 |
+| COMPLETED Create an exogenous model                                         |         |       | 12:20 |  33.7 |
 | COMPLETED Tailor should rely only on exogenous models                       |         |       |  2:12 |   6.0 |
 | COMPLETED Remove scribble group from intermediate model                     |         |       |  0:39 |   1.8 |
 | COMPLETED Tailor is not handling initialisation correctly                   |         |       |  0:15 |   0.7 |
@@ -37,7 +37,7 @@
 | COMPLETED Fix broken build due to JSON tests                                |         |       |  0:26 |   1.2 |
 | COMPLETED Clean up transforms to match exogenous/endogenous models          |         |       |  1:48 |   4.9 |
 | COMPLETED Add validation to tailor transforms                               |         |       |  0:20 |   0.9 |
-| STARTED Rename =meta_type= in JSON                                          |         |       |  2:20 |   6.4 |
+| STARTED Rename =meta_type= in JSON                                          |         |       |  2:28 |   6.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -435,6 +435,7 @@ Check that the transforms support "from" and "to" for the user
 requested types.
 
 *** STARTED Rename =meta_type= in JSON                                :story:
+    CLOCK: [2017-08-24 Thu 18:17]--[2017-08-24 Thu 18:25] =>  0:08
     CLOCK: [2017-08-24 Thu 18:09]--[2017-08-24 Thu 18:16] =>  0:07
     CLOCK: [2017-08-24 Thu 15:53]--[2017-08-24 Thu 16:05] =>  0:12
     CLOCK: [2017-08-24 Thu 15:19]--[2017-08-24 Thu 15:52] =>  0:33
