--- a/doc/agile/v1/sprint_backlog_04.org
+++ b/doc/agile/v1/sprint_backlog_04.org
@@ -14,30 +14,30 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-08-24 Thu 19:01]
+#+CAPTION: Clock summary at [2017-08-24 Thu 20:18]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *36:48* |       |       | 100.0 |
+| *Total time*                                                                | *37:39* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 36:48   |       |       | 100.0 |
-| Active                                                                      |         | 36:48 |       | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   1.6 |
+| Stories                                                                     | 37:39   |       |       | 100.0 |
+| Active                                                                      |         | 37:39 |       | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   1.5 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   2.5 |
-| COMPLETED Use shared pointers in all models                                 |         |       |  6:22 |  17.3 |
-| COMPLETED Update repository in yarn.dia to use pointers                     |         |       |  2:50 |   7.7 |
-| COMPLETED Remove support for upsilon                                        |         |       |  1:10 |   3.2 |
+| COMPLETED Use shared pointers in all models                                 |         |       |  6:22 |  16.9 |
+| COMPLETED Update repository in yarn.dia to use pointers                     |         |       |  2:50 |   7.5 |
+| COMPLETED Remove support for upsilon                                        |         |       |  1:10 |   3.1 |
 | COMPLETED Add a backwards compatible flag                                   |         |       |  1:27 |   3.9 |
-| COMPLETED Create an exogenous model                                         |         |       | 12:20 |  33.5 |
-| COMPLETED Tailor should rely only on exogenous models                       |         |       |  2:12 |   6.0 |
-| COMPLETED Remove scribble group from intermediate model                     |         |       |  0:39 |   1.8 |
+| COMPLETED Create an exogenous model                                         |         |       | 12:20 |  32.8 |
+| COMPLETED Tailor should rely only on exogenous models                       |         |       |  2:12 |   5.8 |
+| COMPLETED Remove scribble group from intermediate model                     |         |       |  0:39 |   1.7 |
 | COMPLETED Tailor is not handling initialisation correctly                   |         |       |  0:15 |   0.7 |
-| COMPLETED Rename exogenous model to exomodel                                |         |       |  1:01 |   2.8 |
-| COMPLETED Rename intermediate model to endomodel                            |         |       |  1:49 |   4.9 |
+| COMPLETED Rename exogenous model to exomodel                                |         |       |  1:01 |   2.7 |
+| COMPLETED Rename intermediate model to endomodel                            |         |       |  1:49 |   4.8 |
 | COMPLETED Fix broken build due to JSON tests                                |         |       |  0:26 |   1.2 |
-| COMPLETED Clean up transforms to match exogenous/endogenous models          |         |       |  1:48 |   4.9 |
+| COMPLETED Clean up transforms to match exogenous/endogenous models          |         |       |  1:48 |   4.8 |
 | COMPLETED Add validation to tailor transforms                               |         |       |  0:20 |   0.9 |
-| STARTED Rename =meta_type= in JSON                                          |         |       |  2:38 |   7.2 |
+| COMPLETED Rename =meta_type= in JSON                                        |         |       |  3:29 |   9.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -434,7 +434,9 @@ Tasks:
 Check that the transforms support "from" and "to" for the user
 requested types.
 
-*** STARTED Rename =meta_type= in JSON                                :story:
+*** COMPLETED Rename =meta_type= in JSON                              :story:
+    CLOSED: [2017-08-24 Thu 20:18]
+    CLOCK: [2017-08-24 Thu 19:27]--[2017-08-24 Thu 20:18] =>  0:51
     CLOCK: [2017-08-24 Thu 18:36]--[2017-08-24 Thu 18:46] =>  0:10
     CLOCK: [2017-08-24 Thu 18:17]--[2017-08-24 Thu 18:25] =>  0:08
     CLOCK: [2017-08-24 Thu 18:09]--[2017-08-24 Thu 18:16] =>  0:07
